GNOME Bugzilla – Bug 765742
GtkRedioButton and GtkCheckButton doesn't aligned right to left language
Last modified: 2016-04-29 03:38:57 UTC
Created attachment 326961 [details] screanshot that describe the bug Hi, I started translating po files for nautilus gnome 3.20 and I got bug in GtkRedioButton and GtkCheckButton (maybe there is more) they don't aligned right to left when I use Right-To-Left language (Arabic in my case) . the strange thing that GtkLabel Works fine with Right-To-Left language . can anyone help me get out of this bug , I added screanshot that describe the bug more clearly. Regards Muhannad
There is two problems here, that are both related to the box gadget conversion: 1. We reverse children of the box gadget in rtl, but we neglected to flip the halign 2. The box gadget has the same misbehavior as GtkGrid when it comes to (non-)expanding children: If there are none, it just leaves empty space instead of distributing the space across all children.
Pushed some fixes that should address this.