gtk/gtkspinbutton.c
@@ -756,10 +756,10 @@ update_node_ordering (GtkSpinButton *spin_button)
   gtk_box_gadget_remove_gadget (GTK_BOX_GADGET (priv->gadget), priv->down_button);
   gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget),
                                 up_button_pos, priv->up_button,
-                                FALSE, TRUE, GTK_ALIGN_FILL);
+                                FALSE, GTK_ALIGN_FILL);
   gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget),
                                 down_button_pos, priv->down_button,
-                                FALSE, TRUE, GTK_ALIGN_FILL);
+                                FALSE, GTK_ALIGN_FILL);
 }
 
 static void
@@ -802,9 +802,9 @@ gtk_spin_button_init (GtkSpinButton *spin_button)
   gtk_css_node_set_state (entry_node, gtk_css_node_get_state (widget_node));
   gtk_css_gadget_set_node (gtk_entry_get_gadget (GTK_ENTRY (spin_button)), entry_node);
   g_object_unref (entry_node);
-  gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget), 
+  gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget),
                                 -1, gtk_entry_get_gadget (GTK_ENTRY (spin_button)),
-                                TRUE, FALSE, GTK_ALIGN_FILL);
+                                TRUE, GTK_ALIGN_FILL);
 
   priv->down_button = gtk_icon_helper_new_named ("button",
                                                  GTK_WIDGET (spin_button));
@@ -815,7 +815,7 @@ gtk_spin_button_init (GtkSpinButton *spin_button)
   gtk_css_node_set_state (gtk_css_gadget_get_node (priv->down_button), gtk_css_node_get_state (widget_node));
   gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget), 
                                 -1, priv->down_button,
-                                FALSE, TRUE, GTK_ALIGN_FILL);
+                                FALSE, GTK_ALIGN_FILL);
 
   priv->up_button = gtk_icon_helper_new_named ("button",
                                                GTK_WIDGET (spin_button));
@@ -826,7 +826,7 @@ gtk_spin_button_init (GtkSpinButton *spin_button)
   gtk_css_node_set_state (gtk_css_gadget_get_node (priv->down_button), gtk_css_node_get_state (widget_node));
   gtk_box_gadget_insert_gadget (GTK_BOX_GADGET (priv->gadget), 
                                 -1, priv->up_button,
-                                FALSE, TRUE, GTK_ALIGN_FILL);
+                                FALSE, GTK_ALIGN_FILL);
 
   gtk_spin_button_set_adjustment (spin_button, NULL);
 
